--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3"
   },
   "devDependencies": {
